--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,17 +11,16 @@ services:
     ports:
       - 8080:8080
 
-  # mysql:
-  #   image: mysql:5.7
-  #   platform: linux/amd64
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: root
-  #     MYSQL_DATABASE: wallet
-  #     MYSQL_PASSWORD: root
-  #   ports:
-  #     - 3306:3306
-  #   volumes:
-  #     - .docker/mysql:/var/lib/mysql
+  mysql:
+    image: mysql:5.7
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: wallet
+      MYSQL_PASSWORD: root
+    ports:
+      - 3306:3306
+    volumes:
+      - ./app/docker/mysql:/var/lib/mysql
 
   # zookeeper:
   #   image: "confluentinc/cp-zookeeper:6.1.0"
